{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 591,
  "lineage": "f794cc36-fda1-7ff8-da24-c743222ef925",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "nginx_svc",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]"
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:security-group/sg-08285bcb5faee37f2",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-08285bcb5faee37f2",
            "ingress": [],
            "name": "github-actions-cluster-20230112104556368300000006",
            "name_prefix": "github-actions-cluster-",
            "owner_id": "756008830886",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Name": "github-actions-cluster",
              "gitAction": "true"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "github-actions-cluster",
              "gitAction": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-038b84a6fdf8fe0fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:security-group/sg-01fd35a9c4c0059f7",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-01fd35a9c4c0059f7",
            "ingress": [],
            "name": "github-actions-node-20230112104556202400000005",
            "name_prefix": "github-actions-node-",
            "owner_id": "756008830886",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Name": "github-actions-node",
              "gitAction": "true",
              "kubernetes.io/cluster/github-actions": "owned"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "github-actions-node",
              "gitAction": "true",
              "kubernetes.io/cluster/github-actions": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-038b84a6fdf8fe0fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3974105889",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08285bcb5faee37f2",
            "security_group_rule_id": "sgr-07ec9ba6df7ea516f",
            "self": false,
            "source_security_group_id": "sg-01fd35a9c4c0059f7",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-988840203",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01fd35a9c4c0059f7",
            "security_group_rule_id": "sgr-07fc96e1a116173df",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2466816570",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01fd35a9c4c0059f7",
            "security_group_rule_id": "sgr-035dab1218b093abe",
            "self": false,
            "source_security_group_id": "sg-08285bcb5faee37f2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3143088671",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01fd35a9c4c0059f7",
            "security_group_rule_id": "sgr-0b993556416f8f85c",
            "self": false,
            "source_security_group_id": "sg-08285bcb5faee37f2",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1632231848",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01fd35a9c4c0059f7",
            "security_group_rule_id": "sgr-040144727c088c1b2",
            "self": false,
            "source_security_group_id": "sg-08285bcb5faee37f2",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-99144291",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01fd35a9c4c0059f7",
            "security_group_rule_id": "sgr-0e4c78a1c40d7bddb",
            "self": false,
            "source_security_group_id": "sg-08285bcb5faee37f2",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4222487935",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01fd35a9c4c0059f7",
            "security_group_rule_id": "sgr-09de4a63dec91dc07",
            "self": false,
            "source_security_group_id": "sg-08285bcb5faee37f2",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3786440667",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01fd35a9c4c0059f7",
            "security_group_rule_id": "sgr-041da7bef73f8e072",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-562883931",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01fd35a9c4c0059f7",
            "security_group_rule_id": "sgr-05788e906d902344b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2245217972",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-01fd35a9c4c0059f7",
            "security_group_rule_id": "sgr-04ab4de06e19585ae",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0378c3b7433597039",
            "domain": "vpc",
            "id": "eipalloc-0378c3b7433597039",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-35-111-36.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.111.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "gitAction-eks-vpc-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "gitAction-eks-vpc-ap-northeast-2a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:internet-gateway/igw-025789d4b85e386d3",
            "id": "igw-025789d4b85e386d3",
            "owner_id": "756008830886",
            "tags": {
              "Name": "gitAction-eks-vpc"
            },
            "tags_all": {
              "Name": "gitAction-eks-vpc"
            },
            "vpc_id": "vpc-038b84a6fdf8fe0fe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0378c3b7433597039",
            "connectivity_type": "public",
            "id": "nat-023d3bf805e9776f1",
            "network_interface_id": "eni-039737dfea4666d38",
            "private_ip": "10.0.101.214",
            "public_ip": "3.35.111.36",
            "subnet_id": "subnet-0402a9114dc9b4193",
            "tags": {
              "Name": "gitAction-eks-vpc-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "gitAction-eks-vpc-ap-northeast-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a9348a7e87e780901080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-023d3bf805e9776f1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a9348a7e87e78090",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-025789d4b85e386d3",
            "id": "r-rtb-04d8a6672e5a09de41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04d8a6672e5a09de4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:route-table/rtb-0a9348a7e87e78090",
            "id": "rtb-0a9348a7e87e78090",
            "owner_id": "756008830886",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gitAction-eks-vpc-private"
            },
            "tags_all": {
              "Name": "gitAction-eks-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-038b84a6fdf8fe0fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:route-table/rtb-04d8a6672e5a09de4",
            "id": "rtb-04d8a6672e5a09de4",
            "owner_id": "756008830886",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gitAction-eks-vpc-public"
            },
            "tags_all": {
              "Name": "gitAction-eks-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-038b84a6fdf8fe0fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5ad4c0a9cf8a964",
            "route_table_id": "rtb-0a9348a7e87e78090",
            "subnet_id": "subnet-06da6d986dd180a2c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0941f4c9f2c5f7c1b",
            "route_table_id": "rtb-0a9348a7e87e78090",
            "subnet_id": "subnet-0a1d70a5b068aa2dd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b4cd0bc58d5216f",
            "route_table_id": "rtb-0a9348a7e87e78090",
            "subnet_id": "subnet-0ed585aa4baa38286"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0928e4af35a459fc3",
            "route_table_id": "rtb-04d8a6672e5a09de4",
            "subnet_id": "subnet-0402a9114dc9b4193"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbb5d09003451d29",
            "route_table_id": "rtb-04d8a6672e5a09de4",
            "subnet_id": "subnet-0eeb18084eadd2040"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae56a96808b49a88",
            "route_table_id": "rtb-04d8a6672e5a09de4",
            "subnet_id": "subnet-02fc4d39926e04bda"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:subnet/subnet-06da6d986dd180a2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06da6d986dd180a2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "756008830886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gitAction-eks-vpc-private-ap-northeast-2a",
              "kubernetes.io/cluster/github-actions": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "gitAction-eks-vpc-private-ap-northeast-2a",
              "kubernetes.io/cluster/github-actions": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-038b84a6fdf8fe0fe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:subnet/subnet-0a1d70a5b068aa2dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1d70a5b068aa2dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "756008830886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gitAction-eks-vpc-private-ap-northeast-2c",
              "kubernetes.io/cluster/github-actions": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "gitAction-eks-vpc-private-ap-northeast-2c",
              "kubernetes.io/cluster/github-actions": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-038b84a6fdf8fe0fe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:subnet/subnet-0ed585aa4baa38286",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed585aa4baa38286",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "756008830886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gitAction-eks-vpc-private-ap-northeast-2a",
              "kubernetes.io/cluster/github-actions": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "gitAction-eks-vpc-private-ap-northeast-2a",
              "kubernetes.io/cluster/github-actions": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-038b84a6fdf8fe0fe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:subnet/subnet-0402a9114dc9b4193",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0402a9114dc9b4193",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "756008830886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gitAction-eks-vpc-public-ap-northeast-2a",
              "kubernetes.io/cluster/github-actions": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "gitAction-eks-vpc-public-ap-northeast-2a",
              "kubernetes.io/cluster/github-actions": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-038b84a6fdf8fe0fe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:subnet/subnet-0eeb18084eadd2040",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eeb18084eadd2040",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "756008830886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gitAction-eks-vpc-public-ap-northeast-2c",
              "kubernetes.io/cluster/github-actions": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "gitAction-eks-vpc-public-ap-northeast-2c",
              "kubernetes.io/cluster/github-actions": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-038b84a6fdf8fe0fe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:subnet/subnet-02fc4d39926e04bda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fc4d39926e04bda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "756008830886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gitAction-eks-vpc-public-ap-northeast-2a",
              "kubernetes.io/cluster/github-actions": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "gitAction-eks-vpc-public-ap-northeast-2a",
              "kubernetes.io/cluster/github-actions": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-038b84a6fdf8fe0fe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:756008830886:vpc/vpc-038b84a6fdf8fe0fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-008c54772dab56011",
            "default_route_table_id": "rtb-0e12824eb19afc766",
            "default_security_group_id": "sg-0f116fd6b81fc4337",
            "dhcp_options_id": "dopt-09c88f696434c58c0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-038b84a6fdf8fe0fe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e12824eb19afc766",
            "owner_id": "756008830886",
            "tags": {
              "Name": "gitAction-eks-vpc"
            },
            "tags_all": {
              "Name": "gitAction-eks-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}